Alignment fix on weather text

--- a/src/components/fortnightly-forecast-widget/forecast-tile/forecast-tile.css
+++ b/src/components/fortnightly-forecast-widget/forecast-tile/forecast-tile.css
@@ -5,9 +5,8 @@
   border-radius: 8px;
 
   display: grid;
-  grid-template-columns: 1fr 1fr 2fr 1fr;
-  place-items: center;
-
+  grid-template-columns: 1fr 3fr 1fr;
+  align-items: center;
   text-align: center;
 
   padding: 0.2rem;
@@ -15,11 +14,16 @@
 }
 
 .forecast-tile:hover {
-      background-color: rgb(147, 186, 209);
-      cursor: pointer;
-      color: #FFF;
+  background-color: rgb(147, 186, 209);
+  cursor: pointer;
+  color: #fff;
 }
 
-.date {
+.date,
+.actual {
   font-weight: bold;
+}
+.day {
+  align-self: center;
+  justify-items: start;
 }
